1 file modified, 1 added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
+		<img src="/public/ric-1.jpg" alt="">
 			<h1>Welcome!</h1>
 			<p>
 				This website is for my simple blog, in here I will post my life hobbies, photos, events and videos including some repairs and tutorials.
@@ -28,7 +29,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				<li>Washing Machine Repair</li>
 				<li>Speaker/Sound System Repair</li>
 				<li>Computer & Laptop Data Recovery</li>
-				<li>Music & Video downloads for USB and Memmory Card</li>
+				<li>Music & Video downloads for USB and Memory Card</li>
 			</ul>
 			<p>
 				Thank you for visiting! If you have any questions, contact me by clicking the link below.<br> 
