--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-	<img src="/ric.jpg" alt="">
+	<img src="/home/ric-1.jpg" alt="">
 			<h1>Welcome!</h1>
 			<p>
 				This website is for my simple blog, in here I will post my life hobbies, photos, events and videos including some repairs and tutorials.
@@ -33,7 +33,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			</ul>
 			<p>
 				Thank you for visiting! If you have any questions, contact me by clicking the link below.<br> 
-				 <a href="/contacts"
+				 <a href="/home/contacts"
 					>Contact us
 				</a>
 			</p>
