--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/BlogPost.astro';
 	title="Contact Us"
 	description="Number, Email or Chat"
 	pubDate={new Date('August 08 2021')}
-	heroImage="/home/blog-placeholder-about.jpg"
+	heroImage="/blog-placeholder-about.jpg"
 >
 	<p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
