--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			</ul>
 			<p>
 				Thank you for visiting! If you have any questions, contact me by clicking the link below.<br> 
-				 <a href="/home/contacts"
+				 <a href="/contacts"
 					>Contact us
 				</a>
 			</p>
