--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				 <a href="/contacts"
 					>Contact us
 				</a>
-				<button >Contact Us</button>
+				<button href="/contacts" >Contact Us</button>
 			</p>
 
 		</main>
