--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,10 +7,10 @@ import { SITE_TITLE } from '../consts';
 	<nav>
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
-			<HeaderLink href="/contacts">Contact Us</HeaderLink>
+			<HeaderLink href="/home">Home</HeaderLink>
+			<HeaderLink href="/home/blog">Blog</HeaderLink>
+			<HeaderLink href="/home/about">About</HeaderLink>
+			<HeaderLink href="/home/contacts">Contact Us</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://facebook.com/ricky.banuelos" target="_blank">
